Implemented brightness/contrast sliders. Plus misc bugfixes.

--- a/src/main/resources/web/arachne/corrudither/corrudither.fxml
+++ b/src/main/resources/web/arachne/corrudither/corrudither.fxml
@@ -19,12 +19,14 @@
 
       <HBox alignment="TOP_CENTER">
         <Label text="Contrast"/>
-        <Slider/>
+        <Slider fx:id="contrastSlider" min="-1" max="2"/>
+        <TextField fx:id="contrastSliderValue"/>
       </HBox>
 
       <HBox alignment="TOP_CENTER">
         <Label text="Brightness"/>
-        <Slider/>
+        <Slider fx:id="brightnessSlider" min="-2" max="2"/>
+        <TextField fx:id="brightnessSliderValue"/>
       </HBox>
 
       <padding>
